initial rework of stringr section

--- a/working-with-text.Rmd
+++ b/working-with-text.Rmd
@@ -34,27 +34,29 @@ h3{
 ```
 
 
+Sometimes your data set is quite text heavy. This can be for a lot of different reasons. Maybe the raw data are actually taken from text sources (e.g., newspaper articles), or maybe your data set contains a lot of free responses to survey questions. Or maybe you just need to reorganise some of the text used to describe nominal scale variables. Regardless of what the reason is, you’ll probably want to know a little bit about how to handle text in R. A few minor examples of this have appeared earlier in these notes (e.g., using `nchar()` to calculate the number of characters in a string). When I wrote *Learning Statistics with R* I included some notes on how to work with text using base R, but overall I've come to the view that the tidyverse approach provided via the **stringr** package is a little more coherent and less problematic for new users, so I'll take that approach here. 
 
+## Preliminaries
 
-Yay! Now I have something nerdy to do that is fun ... I will play around with the text of *Pride and Prejudice* while (finally!) taking a look at `stringr`. So, let's do this! First, I'll need one Jane Austen novel please!
-
-```{r}
-pp <- janeaustenr::prideprejudice
-pp[1:11]
-```
-
-Check `r emo::ji("white_check_mark")` Next, I'll need one text manipulation package:
-
-```{r}
-library(stringr)
-```
-
-That's another check! `r emo::ji("white_check_mark")` `r emo::ji("white_check_mark")` Yay!!!!
-
+- `print` 
+- `cat`
 
 ## Getting started
 
-I'm really happy upon looking at the documentation `r emo::ji("books")`. It's really nicely structured. To quote straight from the package vignette:
+The data come from Experiment 1 in a [very cool paper](https://doi.org/10.1073/pnas.0707835105) by Simon Kirby, Hannah Cornish, and Kenny Smith. 
+
+```{r}
+chains <- read_csv("./data/kirbyetal2008_exp1_wide.csv")
+chain_3 <- chains %>% 
+  filter(version == "chain3") %>%
+  select(color,shape,motion,starts_with("name")) 
+print(chain_3)
+
+input <- chain_3$name_0
+output <- chain_3$name_10
+```
+
+Excellent! I have a data set `r emo::ji("white_check_mark")` Next, I'll need a string manipulation package. **stringr** is loaded automatically with **tidyverse** so that's another `r emo::ji("white_check_mark")`. Time to get started! The easiest way to approach this is to take a look at the package documentation for **stringr**. As with most tidyverse packages it's clear and thorough, so a large part of what I'm doing here is providing an introduction to their work. To quote straight from the package [vignette](https://cran.r-project.org/web/packages/stringr/vignettes/stringr.html)
 
 >There are four main families of functions in stringr:
 >
@@ -63,47 +65,134 @@ I'm really happy upon looking at the documentation `r emo::ji("books")`. It's re
 > - Locale sensitive operations whose operations will vary from locale to locale.
 > - Pattern matching functions. These recognise four engines of pattern description. The most common is regular expressions, but there are three other tools.
 
-... that's promising! I guess I'll just follow the [vignette](https://cran.r-project.org/web/packages/stringr/vignettes/stringr.html) then `r emo::ji("smile_cat")` and try out each category one at a time.
+In my experience, the first three of these are relatively straightforward and are sufficient to cover a wide range of applied problems. The *pattern maching* functions are a little more challenging, at least when regular expressions are involved, but even there you can achieve a lot with only a modest knowledge (which is lucky for me because regular expressions are painful)
 
-## Character manipulation
 
-I feel like there's an obvious joke to be made here about manipulative Jane Austen characters, but nothing is coming to mind, a sure sign that the viral infection has crossed the blood-brain barrier and I'm losing my mind. Neverthelesss...
+## Flatten strings
 
-As one might expect, the `str_length` function returns the length of a string, much like `nchar` in the base packages:
-
-```{r}
-titletext <- c("Pride and Prejudice", "by Jane Austen")
-str_length(string = titletext)
-```
-
-The `str_sub` function is used to extract substrings from the string, and replace them with new values. In this function the substring is defined by the `start` and `end` of the substring:
+Our first job might be just to visually inspect the words that appear in the `output` of the iterated learning chain, and compare them to the words that were present in the `input`. To make things easier on ourselves, we'll use the `str_flatten()` function to *flatten* each of these vectors to a single string. We'll specify `collapse = ", "` so that the output takes the form of a nice comma-separated list of words
 
 ```{r}
-str_sub(string = titletext, start = 4, end = 12)
+input %>% str_flatten(collapse = ", ")
+output %>% str_flatten(collapse = ", ")
 ```
 
-So far, nothing too surprising. No wait, I tell a lie ... you can use negative indices to define a position relative to the right edge of the string. So this would let me grab the last 8 characters of the string:
+## String length
+
+The one of the first things I notice when looking at this output is that they're rather different in length. Even though there are 27 words in each list, it looks like the `output` words are shorter. We can check this by using the `str_length()` function to compute the length of each word. 
 
 ```{r}
-str_sub(string = titletext, start = -8, end = -1)
+input %>% str_length() 
+output %>% str_length()
 ```
 
-Ooh that is very nice. You can also replace text using `str_sub`. So in this instance I can truncate the strings at 5 characters and then append `"..."`
+## Substrings
+
+One thing I might be interested in, either for theoretical reasons (e.g., looking for meaningful prefixes) or practical ones (e.g., convenient plot labels) is extract a smaller subset of the string. A common example is to take the first three characters. We can do this using `str_sub()`
 
 ```{r}
-str_sub(string = titletext, start = 6) <- "..."
-titletext
+output %>% str_sub(start = 1, end = 3)
 ```
 
-Finally, the `str_dup` function lets you replicate the content within a string. So either of these works:
-```{r,results='hold'}
-str_dup(string = titletext, times = 2)
-str_dup(string = titletext, times = c(2,4))
+A feature of `str_sub` that sometimes comes in handy is that you can specify negative values here to refer to the distance from the end of the string. If for instance I wanted to extract the last three characters in every word:
+
+```{r}
+output %>% str_sub(start = -3, end = -1)
 ```
 
-Very nice.
+## String duplication
 
-## Whitespace manipulation
+I'm not sure why I would want it in this context, but we can duplicate strings using `str_dup()`
+
+```{r}
+output %>% str_dup(times = 3)
+```
+
+## String truncation and padding
+
+Sometimes it is useful to ensure that every string has the same length. Again, this can be   quite useful when labelling data. For longer strings we might need to truncate it using `str_trunc()` and for shorter strings we might need to pad it with whitespace (or other characters) using `str_pad()`. To give a sense of this:
+
+```{r, results='hold'}
+str_pad(string = "Danielle", width = 20)
+str_pad(string = "Danielle", width = 20, side = "right")
+str_pad(string = "Danielle", width = 20, side = "both")
+str_pad(string = "Danielle", width = 20, side = "both", pad = "-")
+```
+
+```{r, results='hold'}
+str_trunc(string = "Danielle", width = 9)
+str_trunc(string = "Danielle", width = 8)
+str_trunc(string = "Danielle", width = 7)
+str_trunc(string = "Danielle", width = 7, ellipsis = "+++")
+```
+
+Truncation and padding work very nicely together:
+
+```{r}
+input %>% 
+  str_pad(width = 7, side = "right") %>%
+  str_trunc(width = 7)
+```
+
+## Removing white space
+
+A common problem when dealing with text is white space that appears in the wrong place. For example, suppose someone intended to type the words *tupim*, *tupin* and *poi* as part of the experiment but ended up with additional spaces, leading to this as the raw data:
+
+```{r}
+raw <- "  tupim   tupin    poi    "
+```
+
+The `str_trim()` function removes all leading and trailing whitespace; `str_squish()` does the same but also compresses any internal whitespace to a single character. Thus:
+
+```{r, results='hold'}
+raw
+raw %>% str_trim()
+raw %>% str_squish()
+```
+
+## Wrapping a string
+
+```{r}
+input %>% 
+  str_flatten(", ") %>% 
+  str_wrap(width = 30, indent = 5, exdent = 3) %>% 
+  cat()
+```
+
+
+
+## Locale sensitive functions
+
+There are a collection of functions that manipulate properties of text that vary from one language to the next. So for instance
+
+- `str_to_upper`
+- `str_to_lower`
+- `str_to_title`
+- `str_order`
+- `str_sort`
+
+Okay, reading through the vignette further, the `str_to_upper`, `str_to_lower` and `str_to_title` functions do exactly what they say on the tin, but the package documentation is at pains to point out that they will give you different answers depending on where you are, as will sorting functions like `str_order` and `str_sort`. Makes perfect sense: alphabets and the ordering of characters within the alphabets vary from place to place, so it's really nice that these are locale-sensitive. Natural language is messy.
+
+
+
+
+
+
+
+
+## OLD
+
+- `str_pad`
+- `str_trim`
+- `str_wrap`
+- `str_squish`
+
+
+```{r}
+pp <- janeaustenr::prideprejudice
+titletext <- "dfdfgsesdfefasesdfsefsadfsefedå"
+```
+
 
 ... and we're back! The `str_pad` function adds whitespace padding to ensure that the string reaches a particular length:
 
@@ -135,12 +224,8 @@ cat(str_wrap(string = ppstart, width = 20))
 It even lets you specify the `indent` and `exdent` of the output string, so you can have margins!
 
 
-## Locale sensitive functions
 
-Okay, reading through the vignette further, the `str_to_upper`, `str_to_lower` and `str_to_title` functions do exactly what they say on the tin, but the package documentation is at pains to point out that they will give you different answers depending on where you are, as will sorting functions like `str_order` and `str_sort`. Makes perfect sense: alphabets and the ordering of characters within the alphabets vary from place to place, so it's really nice that these are locale-sensitive. Natural language is messy.
-
-
-## Pattern matching!
+## Pattern matching tasks
 
 Okay, pattern matching time. My nightmares about `grep` have mostly settled down in my old age, and it's refreshing to read something pertaining to regular expressions without bursting into tears! And I really like the way the pattern matching functions are organised in `stringr`. We have functions that specify *tasks*.
 
@@ -156,6 +241,8 @@ For the sake of helping my own learning, I'll type out what they do:
 - `str_split` breaks a string by a separating character; and there's also the `str_split_fixed` function that breaks it into a fixed number of chunks.
 
 Okay, a lot of that feels very familiar, and it'll probably take a bit of getting used to, but I like the overall structure here. I think after a bit of playing it will be really natural.
+
+## Pattern matching engines
 
 The thing I really like, though, is the fact that the *engine* that defines what counts as a pattern is broken up into convenience functions:
 
@@ -196,6 +283,8 @@ ppstart %>%
   str_wrap(width = 80) %>%
   cat
 ```
+
+## Regular expressions
 
 
 ## Playing with Pride and Prejudice
