--- a/index.Rmd
+++ b/index.Rmd
@@ -89,7 +89,8 @@ Everything from here onwards is *very much* a work in progress!
 
 ## Other things
 
-- Slides from the introductory lecture: [pptx](./docs/overview.pptx), [pdf](./docs/overview.pdf)
+- Week 1 slides: [pptx](./docs/overview.pptx), [pdf](./docs/overview.pdf)
+- Week 2 workbook: [here](./lesson2.html)
 - Data sets are [here](./docs/data.zip)
 - Github repository is [here](https://github.com/djnavarro/psyr)
 
